# Delivery-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  users.json
data/raw/: deliveries.jsonl  products.jsonl  sessions.jsonl  users.jsonl
notebooks/: ARIMA_multiple_var.ipynb  Example Notebook.ipynb  First stage.ipynb  advanced_model.ipynb  basic_model.ipynb  data_analysis.ipynb  model.ipynb
service/: main.py
service/database/: predictions.csv  users.csv  users.json
service/delivery_optimization/: Database.py  Models.py  __init__.py
service/tests/: examples.http  test__endpoints.py
service/tests/rsc/: predictions.csv  products.jsonl  sessions.jsonl  users.csv  users.json
