[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Łukasz Neumann <lukasz.neumann@pw.edu.pl>", "Karolina Romanowska <karolina.romanowska2.stud@pw.edu.pl>", "Ewa Roszczyk <01149741@pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
