[tool.poetry]
name = "delivery_optimization"
version = "0.1.0"
description = ""
authors = ["Łukasz Neumann <lukasz.neumann@pw.edu.pl>", "Karolina Romanowska <karolina.romanowska2.stud@pw.edu.pl>", "Ewa Roszczyk <01149741@pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pytest = "^6.2.5"
requests = "^2.27.0"
sklearn = "^0.0"
python-multipart = "^0.0.5"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
